--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,47 @@
-# Astro Runtime includes the following pre-installed providers packages: https://www.astronomer.io/docs/astro/runtime-image-architecture#provider-packages
-pyspark
-beautifulsoup4
-loguru
+asttokens==3.0.0
+azure-core==1.32.0
+azure-storage-blob==12.24.1
+beautifulsoup4==4.12.3
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+comm==0.2.2
+cryptography==44.0.0
+debugpy==1.8.12
+decorator==5.1.1
+exceptiongroup==1.2.2
+executing==2.2.0
+idna==3.10
+ipykernel==6.29.5
+ipython==8.31.0
+isodate==0.7.2
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+loguru==0.7.3
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+packaging==24.2
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py4j==0.10.9.7
+pycparser==2.22
+Pygments==2.19.1
+pyspark==3.5.4
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+pyzmq==26.2.0
+requests==2.32.3
+six==1.17.0
+soupsieve==2.6
+stack-data==0.6.3
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.12.2
+urllib3==2.3.0
+wcwidth==0.2.13
